--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,8 @@
     "require": {
         "php": "^8.1",
         "illuminate/support": "^10.0|^11.0|^12.0",
-        "yajra/laravel-datatables-oracle": "^12.4"
+        "yajra/laravel-datatables-oracle": "^12.4",
+        "laravel/ui": "^4.0"
     },
     "autoload": {
         "psr-4": {
